[project]
name = "ABmice"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "matplotlib>=3.5.3",
    "numpy>=1.21.6",
    "pandas>=1.1.5",
    "scipy>=1.7.3",
]

[dependency-groups]
dev = [
    "jupyter>=1.1.1",
]


[[tool.uv.index]]
name = "ABmice"
url = "https://github.com/krajnyi93/ABmice/"
index = "https://github.com/krajnyi93/ABmice/"

[tool.uv.build-backend]
source-include = ["*.json"]